--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Find a Phone</title>
+  <title>News About Mars</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
@@ -13,15 +13,15 @@
   <div class="container">
 
     <div class="jumbotron text-center">
-      <h1>Phone Shoppin'</h1>
-      <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Find a phone!</a></p>
+      <h1>Mission to Mars</h1>
+      <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
     </div>
 
     <!-- Phone Listings -->
     <div class="row" id="craiglist-listings">
       <div class="col-md-12">
         <h4 class="heading">{{listings.news_title}} {{listings.news_p}}</h4>
-        <small>{{listings.table}}</small>
+        <small>{{listings.hemisphere_image_urls}}</small>
       </div>
     </div>
 
