--- a/templates/index.html
+++ b/templates/index.html
@@ -19,19 +19,41 @@
     <div class='row'>
         <div class='col-md-12'>
             <h3><strong>Latest Mars News</strong></h3>
-            <h5>{{listings.news_title}}</h5>
+            <h5><strong>{{listings.news_title}}</strong></h5>
             <p>{{listings.news_p}}</p>
         </div>
-
-
     </div>
-    <!-- Phone Listings -->
-    <div class="row" id="craiglist-listings">
-      <div class="col-md-12">
-        <small>{{listings.hemisphere_image_urls}}</small>
-      </div>
+    <div class='row'>
+        <div class='col-md-6'>
+                <h3><strong>Featured Mars Image</strong></h3>
+                <img hred={{listings.featured_image_url}}>
+                
+        </div>
+        <div class='col-md-6'>
+            <h4><strong>Mars Fact</strong></h4>
+            {{listings.table}}
+            
+        </div>
     </div>
-
+    <div class='row'>
+        <div class='col-md-12'>
+            <h3><strong>Mars Hemisphere</strong></h3>
+        </div>
+    </div>
+    <hr>
+    <div class='row'>
+        {% for i in listings.hemisphere_image_urls}
+        <div class='col-md-4'>
+            <div class="card" style="width: 18rem;">
+                <img src={{i.img_url}} class="card-img-top" alt="{{i.title}}">
+                <div class="card-body">
+                  <p class="card-text">{{i.title}}</p>
+                </div>
+              </div>
+        </div>
+        {%endfor%}
+    </div>
+    <hr>
   </div>
 </body>
 
