--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,7 @@
         </div>
         <div class='col-md-6'>
             <h4><strong>Mars Fact</strong></h4>
-            {{listings.table}}
-            
+            <table> {{listings.table}}</table>
         </div>
     </div>
     <div class='row'>
