--- a/templates/index.html
+++ b/templates/index.html
@@ -26,12 +26,12 @@
     <div class='row'>
         <div class='col-md-6'>
                 <h3><strong>Featured Mars Image</strong></h3>
-                <img src={{listings.featured_image_url}}>
+                <img src={{listings.featured_image_url}}  style="width: 600px">
                 
         </div>
         <div class='col-md-6'>
             <h4><strong>Mars Fact</strong></h4>
-            <table> {{listings.table}}</table>
+            {{listings.table|safe }}
         </div>
     </div>
     <div class='row'>
@@ -43,8 +43,8 @@
     <div class='row'>
         {% for i in listings.hemisphere_image_urls%}
         <div class='col-md-4'>
-            <div class="card" style="width: 50px;">
-                <img src={{i.img_url}} class="card-img-top" alt="{{i.title}}" style="width: 50px;">
+            <div class="card" style="width: 350px;">
+                <img src={{i.img_url}} class="card-img-top" alt="{{i.title}}" style="width: 300px;">
                 <div class="card-body">
                   <p class="card-text">{{i.title}}</p>
                 </div>
