--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                 <img src={{listings.featured_image_url}}  style="width: 500px">
                 
         </div>
-        <div class='col-md-7'>
+        <div class='col-md-7' style='margin-left:100px'>
             <h4><strong>Mars Fact</strong></h4>
             {{listings.table|safe }}
         </div>
@@ -42,9 +42,9 @@
     <hr>
     <div class='row'>
         {% for i in listings.hemisphere_image_urls%}
-        <div class='col-md-4'>
+        <div class='col-md-3'>
             <div class="card" style="width: 320px;">
-                <img src={{i.img_url}} class="card-img-top" alt="{{i.title}}" style="width: 250px;">
+                <img src={{i.img_url}} class="card-img-top" alt="{{i.title}}" style="width: 280px;">
                 <div class="card-body">
                   <p class="card-text">{{i.title}}</p>
                 </div>
