--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,10 @@
                 <img src={{listings.featured_image_url}}  style="width: 500px">
                 
         </div>
-        <div class='col-md-7' style='margin-left:100px'>
+        <div class='col-md-3'>
+            
+        </div>
+        <div class='col-md-4'>
             <h4><strong>Mars Fact</strong></h4>
             {{listings.table|safe }}
         </div>
